# pa3-sequencer-raft

./: .env.example  .gitignore  README.md  benchmark.py  docker-compose.yml  manual-test-flow.md  pa3.md  performance-report-1.old.md  performance-report-2.old.md  performance-report-3.md  pyproject.toml  run-pa3-benchmarks-gke.sh
.github/workflows/: docker-images.yml
backends/buyers/: api.py  main.py
backends/common/: db_client.py  errors.py  financial_client.py
backends/financial/: main.py  service.py
backends/sellers/: api.py  main.py
clients/buyers/: cli.py  client.py
clients/common/: client.py
clients/sellers/: cli.py  client.py
common/grpc_gen/: customer_db_pb2.py  customer_db_pb2_grpc.py  product_db_pb2.py  product_db_pb2_grpc.py
databases/customer/: api.py  db.py  main.py
databases/customer/sequencer/: __init__.py  config.py  engine.py  messages.py  retransmit.py  sequencer.py  state_store.py  transport_udp.py
databases/product/: api.py  db.py  main.py  raft.py
docker/: Dockerfile.backend-buyers  Dockerfile.backend-financial  Dockerfile.backend-sellers  Dockerfile.client-buyers  Dockerfile.client-sellers  Dockerfile.db-customer  Dockerfile.db-product
k8s/: README.md  gke-cluster.py  run-benchmark-case.sh  select-product-raft-pod.sh
k8s/helm/: install-apps.sh  reinstall-marketplace.sh
k8s/helm/external-dns/: install.sh
k8s/helm/marketplace/: Chart.yaml  README.md  custom-values.yaml  install.sh  values.yaml
k8s/helm/marketplace/templates/: NOTES.txt  (+12 more)
k8s/helm/traefik/: install.sh
protos/: customer_db.proto  product_db.proto
